Use Set.copyOf for HatchFlags